--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "server": "tsx watch src/server.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Romeu Cajamba",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "10.0.1",
+    "@fastify/swagger": "9.1.0",
+    "@fastify/swagger-ui": "5.0.1",
     "@prisma/client": "^5.20.0",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "fastify": "5.0.0",
     "nodemailer": "^6.9.15",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -25,7 +26,6 @@
     "@types/node": "^22.7.4",
     "@types/nodemailer": "^6.4.16",
     "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.6",
     "prisma": "^5.20.0",
     "tsup": "^8.3.0",
     "tsx": "^4.19.1",
