--- a/.github/workflows/run-unity-test.yml
+++ b/.github/workflows/run-unity-test.yml
@@ -20,6 +20,6 @@ jobs:
 
       - run: npm run test
         env:
-          NODE_ENV: 
-          PORT: 
-          DATABASE_URL: ""
+          NODE_ENV: dev
+          PORT: 4000
+          DATABASE_URL: "mysql://root:@localhost:3306/FLUENCY"
