--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "fluency_hub-api",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "server": "tsx watch src/server.ts"
   },
@@ -17,6 +20,7 @@
     "dotenv": "^16.4.5",
     "fastify": "5.0.0",
     "nodemailer": "^6.9.15",
+    "pg": "8.13.0",
     "swagger-jsdoc": "^6.2.8",
     "zod": "^3.23.8"
   },
